--- a/.viewer.html
+++ b/.viewer.html
@@ -25,16 +25,17 @@
 		<link rel="apple-touch-icon" href="framer/images/icon-180.png" sizes="180x180">
 		<link rel="apple-touch-icon" href="framer/images/icon-192.png" sizes="192x192">
 
-		<link rel="stylesheet" type="text/css" href="framer/style.css">
+		<link rel="stylesheet" type="text/css" href="framer/style.css?nocache=6d40bc53861208d298f85019e08849ff">
 
 		<script src="framer/coffee-script.js"></script>
-		<script src="framer/framer.js"></script>
-		<script src="framer/framer.generated.js"></script>
-		<script src="framer/framer.modules.js"></script>
-		<script src="framer/framer.vekter.js"></script>
+		<script src="framer/framer.js?nocache=5354df4620043edc97b82b2ecadc45e4"></script>
+		<script src="framer/framer.generated.js?nocache=0d11efc312538157f05a24053658f9ce"></script>
+		<script src="framer/framer.modules.js?nocache=90f7e282329151ace519e80aca0b5532"></script>
+		<script src=""></script>
 		<script src="framer/framer.init.js"></script>
 
 	</head>
 	<body>
 	</body>
 </html>
+<script src='/_server/resources/FramerStudioViewer/build/FramerStudioViewer.js'></script>
